force-app/main/default/objects/Fellow_Application_Engagement__mdt/Fellow_Application_Engagement__mdt.object-meta.xml
<CustomObject>
    <label>Fellow Application - Engagement</label>
    <pluralLabel>Fellow Application - Engagement</pluralLabel>
</CustomObject>