force-app/main/default/objects/Fellow_Application_Engagement__mdt/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <label>Country</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>China Fellowship</fullName>
                <default>true</default>
                <label>China Fellowship</label>
            </value>
            <value>
                <fullName>India Fellowship</fullName>
            </value>
            <value>
                <fullName>U.S. Fellowship</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>