force-app/main/default/objects/Fellow_Application_Engagement__mdt/fields/MinimumEngagements__c.field-meta.xml
<CustomField>
    <fullName>MinimumEngagements__c</fullName>
    <label>MinimumEngagements</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>